# GalSat

./: AdaptiveGASolver.cc  AdaptiveGASolver.h  AdaptivePenaltyGA.cc  AdaptivePenaltyGA.h  AdaptivePenaltyGenome.cc  AdaptivePenaltyGenome.h  Clause.cc  Clause.h  ClauseAllocator.cc  ClauseAllocator.h  DimacsParser.cc  DimacsParser.h  EnumerativeSolver.cc  EnumerativeSolver.h  GAVariableAssignmentGenome.cc  GAVariableAssignmentGenome.h  GSatPartialSolver.cc  GSatPartialSolver.h  GSatSolver.cc  GSatSolver.h  GalSatResourceInfo.h  Literal.cc  Literal.h  LiteralWatcherDatabase.cc  LiteralWatcherDatabase.h  Makefile.am  PartialGASolver.cc  PartialGASolver.h  PenaltyTracker.cc  PenaltyTracker.h  Problem.cc  Problem.h  SatSolver.cc  SatSolver.h  SimpleGASolver.cc  SimpleGASolver.h  SolverInfo.h  VariableAssignment.cc  VariableAssignment.h  config.h  (+4 more)
tests/: input.dimacs~  out1  test.sh
