#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT(galsat, 0.0.1, krismicinski@gmail.com)
AC_CONFIG_SRCDIR([Literal.h])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lX11':
AC_CHECK_LIB([X11], [main])
# FIXME: Replace `main' with a function in `-lXm':
AC_CHECK_LIB([Xm], [main])
# FIXME: Replace `main' with a function in `-lXt':
AC_CHECK_LIB([Xt], [main])
# FIXME: Replace `main' with a function in `-lbitstr':
AC_CHECK_LIB([bitstr], [main])
# FIXME: Replace `main' with a function in `-lga':
AC_CHECK_LIB([ga], [main])
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [main])

# Checks for header files.
AC_CHECK_HEADERS([inttypes.h limits.h stddef.h stdint.h stdlib.h string.h sys/time.h unistd.h values.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

AM_INIT_AUTOMAKE(galsat,1.0)

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_REALLOC
AC_FUNC_STRTOD
AC_CHECK_FUNCS([floor gethostname getpagesize memmove memset pow select sqrt strtol])

AC_CONFIG_FILES([Makefile])
#                 galib247/examples/gnu/makefile
#                 galib247/examples/graphic/makefile
#                 galib247/examples/makefile
#                 galib247/ga/makefile
#                 galib247/makefile
#                 minisat-2.2.0/core/Makefile
#                 minisat-2.2.0/simp/Makefile
#                 minisat-2.2.0/utils/Makefile])

AC_OUTPUT
